[package]
name = "ssb-validate"
version = "1.0.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
sha2 = "0.8.1"
snafu = "0.6.2"
ssb-legacy-msg-data = { git="https://github.com/leo-lb/legacy-msg-data", version = "0.1.1" }
ssb-multiformats = { git = "https://github.com/leo-lb/ssb-multiformats", version = "0.1.0" }
ssb-verify-signatures = {git = "https://github.com/leo-lb/ssb-verify-signatures"}
rayon = "1.3.0"

[dev-dependencies]
criterion = "0.3.0"
flumedb = { version = "0.1.3", git = "https://github.com/leo-lb/flumedb-rs" }

[[bench]]
name = "bench"
harness = false
